BI-13919: Change selection of first officer appointment
* The name, is_corporate_officer and date_of_birth fields are
  populated using data from the first chosen officer appointment.
* Previously the first one returned from Mongo, now has been changed
  to be the most recently appointed active appointment, if any, or the most recently
  appointed resigned or inactive appointment.